# tariff

./: .env.docker.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  shared_config.json  start.bat  start.sh  stop.bat  stop.sh  verify_readme_task10.sh
.pass_summaries/: build_login.md  contract_tests.md
backend/: .env.example  pyproject.toml  test_login.py  verify_auth.py  verify_seed_counts.py
backend/.quality/lint/: ruff-result.json  summary.json
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  seed.py
backend/app/middleware/: __init__.py  auth.py  correlation_id.py
backend/app/models/: __init__.py  agreement.py  alert.py  audit.py  base.py  compliance.py  policy_event.py  recommendation.py  reference.py  scenario.py  user.py
backend/app/routers/: __init__.py  agreements.py  alerts.py  auth.py  compliance.py  dashboard.py  policy_events.py  recommendations.py  scenarios.py
backend/app/routers/graphify-out/: graph.json  manifest.json
backend/app/routers/graphify-out/cache/: stat-index.json
backend/app/schemas/: __init__.py  agreement.py  alert.py  auth.py  common.py  compliance.py  dashboard.py  policy_event.py  recommendation.py  scenario.py
backend/app/services/: __init__.py  alert.py  analytics.py  audit.py  compliance_workflow.py  financial_analysis.py  monitoring.py  recommendation.py  trade_agreement.py
backend/storage/: app.db
backend/tests/: conftest.py  test_alerts.py  test_auth.py  test_compliance.py  test_dashboard.py  test_policy_events.py  test_recommendations.py  test_scenarios.py
(+37 files in other folders)
